# psephulator

./: .gitignore  Cargo.toml  README.md
data/: preference_flows_england.json  uk_2024.json  uk_2024_full.json
src/: main.rs
tests/: simulation_tests.rs
