[package]
name = "psephulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.13"
chrono = { version = "0.4.38", features = ["serde"] }
dialoguer = "0.11.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "scraper"
path = "src/bin/scraper.rs"
